--- a/index.html
+++ b/index.html
@@ -456,6 +456,11 @@
 </head>
 <body>	
   <div class="card" id="mainCard">
+  
+  <audio id="bgMusic" autoplay loop muted>
+  <source src="Rafta.mp3" type="audio/mpeg">
+</audio>
+
     <h1>🎉 प्रिय बायको तुला वाढदिवसाच्या हार्दिक शुभेच्छा ...! 🎂</h1>
     <p class="lead">Wishing you endless joy, laughter, and happiness today ❤️</p>
 
@@ -927,7 +932,16 @@ function checkPuzzle(){
     }, 50);
   }
 }
+const bgMusic = document.getElementById("bgMusic");
 
+// Unmute + play after first user interaction
+document.addEventListener("click", () => {
+  if (bgMusic.muted) {
+    bgMusic.muted = false;
+    bgMusic.volume = 0.7;
+    bgMusic.play().catch(err => console.log("Music blocked:", err));
+  }
+}, { once: true });
 
   </script>
 </body>
