--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
       
 	  <button class="btn" onclick="openGift()">🎁 Mazya hya bhavna</button>
 	 
-<button class="btn" onclick="openPuzzle()">🧩 Click to see our first message but  with a twist</button>
+<button class="btn" onclick="openPuzzle()">🧩 Click here to see our first message but  with a twist</button>
 	  
 </div>
 <div id="firstMessageModal" class="modal">
@@ -946,3 +946,4 @@ document.addEventListener("click", () => {
   </script>
 </body>
 </html>
+
