--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   font-size: clamp(2.2rem, 4vw, 3.2rem);
   font-family: "Georgia", serif;
   font-weight: bold;
-  background: linear-gradient(90deg, #ff4d6d, #ff9966, #e91e63);
+  background: linear-gradient(90deg,blue,red);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-shadow: 0 0 18px rgba(233, 30, 99, 0.5), 2px 2px 6px rgba(0,0,0,0.25);
@@ -492,7 +492,7 @@ p.lead {
   <source src="koitumsanahi.mp3" type="audio/mpeg">
 </audio>
 
-    <h1>🎉 प्रिय बायको तुला वाढदिवसाच्या हार्दिक शुभेच्छा ...! 🎂</h1>
+    <h1>प्रिय बायको दिपा  तुला वाढदिवसाच्या खुप खुप शुभेच्छा ...! 🎂</h1>
     <p class="lead">Wishing you endless joy, laughter, and happiness today ❤️</p>
 
     <!-- COUNTUP -->
