--- a/index.html
+++ b/index.html
@@ -536,11 +536,10 @@ p.lead {
     <span class="close" onclick="closeGift()">&times;</span>
     <h2>💌 My Special Wish for You</h2>
     <p>
-      Happy Birthday my love! ❤️  
-      From the day we met till today, you’ve filled my life with happiness, care, and countless memories.  
-      You are my safe place, my joy, and my forever.  
-      On this birthday, I just want to remind you that no matter what, I’ll always be by your side.  
-      Here’s to many more memories, smiles, and endless love together. 💕
+     Happy Birthday my love! ❤️  
+     प्रिय बायको दिपा आज माझ्या आयुष्यातील सगळ्यात महत्वाची कारण 29 ऑगस्ट 1999 नसती तर 10 मे 2025 नसती. 
+	 शुभेच्छा देताना बाप्पा कडे एवढच मागेन की तुझे सगळे स्वप्न पूर्ण होवो.तुझ्या चेहर्‍यावरचे हसू कधीच कमी नको होउदे आणि माझ्या आयुष्यात तु अशीच माझी जिनि बनून रहावीस .
+	 देव करो माझ आयुष्य तुला लाभो आणि तुला निरोगी उदंड आयुष्य लाभो. अशीच माझ्या सोबत नेहमी रहा , माझ्या जिवात जिव असेपर्यंत तुझा येणारा प्रत्येक वाढदिवस असाच छान साजरा करूयात...❤️🫶🏻🧿 💕
     </p>
   </div>
 </div>
@@ -971,3 +970,4 @@ document.addEventListener("click", () => {
   </script>
 </body>
 </html>
+
