--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ p.lead {
   <div class="card" id="mainCard">
   
   <audio id="bgMusic" autoplay loop muted>
-  <source src="hbd" type="audio/mpeg">
+  <source src="hbd.mp3" type="audio/mpeg">
 </audio>
 <audio id="memoriesMusic">
   <source src="koitumsanahi.mp3" type="audio/mpeg">
@@ -970,5 +970,6 @@ document.addEventListener("click", () => {
   </script>
 </body>
 </html>
+
 
 
