--- a/index.html
+++ b/index.html
@@ -429,10 +429,10 @@ p.lead {
 .puzzle-piece {
   width: 100%;
   height: 100%;
-  background-image: url("firsttext.jpg");
   background-size: 300px 300px;
   cursor: grab;
   border-radius: 4px;
+  border: 1px solid #e91e63;
 }
 
 .puzzle-piece.dragging {
