--- a/index.html
+++ b/index.html
@@ -423,7 +423,8 @@ p.lead {
   gap: 2px;
   border: 3px solid #e91e63;
   border-radius: 10px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.25); 
+  background: black; 
 }
 
 .puzzle-piece {
@@ -975,7 +976,4 @@ document.addEventListener("click", () => {
   </script>
 </body>
 </html>
-
-
-
 
