--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ p.lead {
   <div class="modal-content">
     <span class="close" onclick="closePuzzle()">&times;</span>
     <h2>🧩 Solve the Puzzle!</h2>
-    <p>Complete the picture to reveal where it started ❤️</p>
+    <p>Complete the picture to reveal... ❤️</p>
     <div id="puzzle" class="puzzle"></div>
     <p id="puzzleMessage" style="display:none; font-size:1.2rem; color:#e91e63; margin-top:15px;">
       🎉 You completed it! You complete me too ❤️ Happy Birthday my Love 🎂💞
@@ -976,6 +976,7 @@ document.addEventListener("click", () => {
   </script>
 </body>
 </html>
+
 
 
 
