--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ p.lead {
 </audio>
 
     <h1>प्रिय बायको दिपा  तुला वाढदिवसाच्या खुप खुप शुभेच्छा ...! 🎂</h1>
-    <p class="lead">Wishing you endless joy, laughter, and happiness today ❤️</p>
+    <p class="lead">Wishing you endless joy, laughter, and happiness today and forver... ❤️</p>
 
     <!-- COUNTUP -->
     <div class="countup" id="countup">
@@ -976,6 +976,7 @@ document.addEventListener("click", () => {
   </script>
 </body>
 </html>
+
 
 
 
