--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Happy Birthday</title>
+  <title>Happy Birthday Dipa</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     :root{
@@ -976,6 +976,7 @@ document.addEventListener("click", () => {
   </script>
 </body>
 </html>
+
 
 
 
